--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
         </aside>
 
         <aside class="footer-right">
-          <a href="#"><i class="fab fa-facebook-square fa-2x"></i></a>
-          <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
-          <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+          <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a>
+          <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
+          <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
         </aside>
       </div>
     </div>
@@ -217,9 +217,9 @@
           <a href="#" class="mobile-nav-link">Install Guide</a>
       </div>
       <div class="mobile-bottom">
-        <a href="#"><i class="fab fa-facebook-square fa-2x"></i></a>
-        <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
-        <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+        <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a>
+        <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
+        <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
       </div>
     </div>
     </section>
