--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <!---Start Workflow Area-->
     <section class="worflow-area">
       <div class="container" id="workflow">
-        <h2>Supercharge your workflow</h2>
+        <h2 class="workflow-h2">Supercharge your workflow</h2>
         <article class="about-workflow">    
           <p>We’ve got the tools to boost your productivity.</p>
         </article>
