--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       <div class="container" id="bottom_cta">
         <div class="cta">
           <h2 class="cta-h2">Clipboard for iOS and Mac OS</h2>
-          <p >Available for free on the App Store.  Download for Mac or iOS, sync with iCloud and you’re ready to start adding to your clipboard.</p>
+          <p id="bottom_cta_p">Available for free on the App Store.  Download for Mac or iOS, sync with iCloud and you’re ready to start adding to your clipboard.</p>
         </div>
         <div class="cta-btn-links">
           <div class="ios">
