--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container" id="intro">
       <h1 class="intro-h1"> A history of everything you copy</h1>
       <div class="cta-text">
-        <p>Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your devices.</p>
+        <p class="cta_p">Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your devices.</p>
         </div>
       <div class="cta-btn-links">
         <div class="ios">
@@ -154,7 +154,7 @@
       <div class="container" id="bottom_cta">
         <div class="cta">
           <h2 class="cta-h2">Clipboard for iOS and Mac OS</h2>
-          <p id="bottom_cta_p">Available for free on the App Store.  Download for Mac or iOS, sync with iCloud and you’re ready to start adding to your clipboard.</p>
+          <p class="cta_p">Available for free on the App Store.  Download for Mac or iOS, sync with iCloud and you’re ready to start adding to your clipboard.</p>
         </div>
         <div class="cta-btn-links">
           <div class="ios">
